--- a/wiki.html
+++ b/wiki.html
@@ -15,7 +15,7 @@
 <body>
     <div id="navbar-placeholder"></div>
 
-    <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
+    <button class="sidebar-toggle">☰</button>
 
     <div class="wiki-container">
         <aside class="sidebar" id="sidebar">
@@ -26,8 +26,8 @@
                 <a href="?page=modules" data-page="modules">🧩 Liste des modules disponibles</a>
                 <a href="?page=themes" data-page="themes">🏕 Liste des thèmes disponibles</a>
                 <hr style="width: 80%;">
-                <a href="?page=create_modules" data-page="create_modules">🧩 création de modules</a>
-                <a href="?page=create_themes" data-page="create_themes">🏕 création de thèmes</a>
+                <a href="?page=create_modules" data-page="create_modules">🧩 Création de modules</a>
+                <a href="?page=create_themes" data-page="create_themes">🏕 Création de thèmes</a>
             </nav>
         </aside>
 
