--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <article class="feature">
           <div class="icon">⚡</div>
           <h3>Installation simple</h3>
-          <p>Pas besoin d'avoir plein de plein de systèmes, un serveur supportant PHP (Nginx, Apache...), une base de données MySQL et
+          <p>Pas besoin d'avoir plein de systèmes, un serveur supportant PHP (Nginx, Apache...), une base de données MySQL et
             un nom de domaine suffisent !</p>
         </article>
         <article class="feature">
