--- a/wiki.html
+++ b/wiki.html
@@ -25,6 +25,7 @@
                 <hr style="width: 80%;">
                 <a href="?page=modules" data-page="modules">🧩 Liste des modules disponibles</a>
                 <a href="?page=themes" data-page="themes">🏕 Liste des thèmes disponibles</a>
+                <a href="?page=themes-admin" data-page="themes-admin">⚙ Liste des thèmes du panel administrateur disponibles</a>
                 <hr style="width: 80%;">
                 <a href="?page=create_modules" data-page="create_modules">🧩 Création de modules</a>
                 <a href="?page=create_themes" data-page="create_themes">🏕 Création de thèmes</a>
