ajout documentation sur la création des thèmes admin

--- a/wiki.html
+++ b/wiki.html
@@ -29,6 +29,7 @@
                 <hr style="width: 80%;">
                 <a href="?page=create_modules" data-page="create_modules">🧩 Création de modules</a>
                 <a href="?page=create_themes" data-page="create_themes">🏕 Création de thèmes</a>
+                <a href="?page=create_themes-admin" data-page="create_themes-admin">⚙ Création de thèmes pour le panel administrateur</a>
             </nav>
         </aside>
 
