ajout pages get et prices

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
       <div class="overlay-text">
         <h1>Votre Cloud Personnalisable</h1>
-        <a href="https://github.com/taran35/SiCSy/releases" class="btn-download" target="_blank"
-          rel="noopener noreferrer">📥 Télécharger</a>
+        <a href="get.html" class="btn-download" target="_blank"
+          rel="noopener noreferrer">📥 Obtenir</a>
       </div>
     </section>
 
