Replace error handling with showAlert in mail scripts
Updated error handling in mail.html and unmail.html to use the showAlert function for displaying error messages instead of alert or direct DOM manipulation. This standardizes user feedback on errors.

--- a/mail.html
+++ b/mail.html
@@ -48,7 +48,7 @@
                     })
                     .catch(error => {
                         console.error('Erreur :', error);
-                        alert("Une petite erreur est survenu... Merci de réessayer plus tard")
+                        showAlert("Une petite erreur est survenu... Merci de réessayer plus tard")
                     });
             });
         </script>
