--- a/unmail.html
+++ b/unmail.html
@@ -35,7 +35,7 @@
                     })
                     .catch(error => {
                         console.error('Erreur :', error);
-                        document.getElementById('reponse').textContent = 'Erreur lors de l\'envoi.';
+                        showAlert("Une petite erreur est survenu... Merci de réessayer plus tard")
                     });
             });
         </script>
