--- a/get.html
+++ b/get.html
@@ -52,8 +52,8 @@
                     <h3>Tous les services proposés sont hébergés en France</h3>
                 </div>
             </div>
-            <a href="mail.html" class="btn-host" target="_blank" rel="noopener noreferrer">🏢
-                Voir nos solutions d'hébergement</a>
+            <a href="#" class="btn-host non-cliquable" target="_blank" rel="noopener noreferrer">🏢
+                hebergement non disponible</a>
         </section>
     </main>
 
@@ -61,5 +61,11 @@
     <script src="assets/js/script.js"></script>
 
 </body>
-
+<style>
+.non-cliquable {
+  pointer-events: none;
+  opacity: 0.5;     
+  cursor: not-allowed;  
+}
+</style>
 </html>
